			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.2758 2005/04/26 15:45:38 jinmei Exp $

<200504>
2005-04-27  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/in6.c (in6_update_ifa): always updated
	ia6_updatetime regardless of whether the address is created or
	updated.  This is necessary so that the expiration times will be
	updated	correctly when the lifetiems of an existing address are
	modified by hand or by a process such as a DHCPv6 client.

2005-04-26  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/dhcp6/addrconf.c (na_ifaddrconf): corrected lifetime
	arguments to ifaddrconf().

2005-04-23  SUZUKI, Shinsuke <suz@kame.net>
	* kame/sys/netinet6/in6_rmx.c, in6_ifattach.c: fixed a kernel crash
	by a lock-order-reversal in freebsd5

2005-04-20  SUZUKI, Shinsuke <suz@kame.net>
	* freebsd5/sys/net/if.c: FreeBSD Security Advisory
	 FreeBSD-SA-05:04.ifconf

2005-04-19  SUZUKI, Shinsuke <suz@kame.net>
	* *bsd/sys/netinet/igmp.c, igmp_var.h, in.[ch], ip_output.c,
	  kame/sys/netient/in_msf.c: 
	  IGMPv3 treats 224.0.0.x(x!=1) as a normal IPv4 multicast address,
	  as specified in RFC3766.

	* openbsd/sys/netinet/in.c, in_var.h, ip_output.c,
	* netbsd/sys/netinet/igmp.c, igmp_var.h, in.c, in_pcb.c, in_var.h,
	  ip_output.c: reflect the following MLDv2 changes into the 
	  NetBSD/OpenBSD's IGMPv3 implementation.
	- fixs a kernel crash by an IGMPv3 Query (2005-01-01)
	- retransmits IGMPv3 report RobustnessVariable times (2004-12-31)
	- corrects an IGMP-query handling when MaxResponseCode=0 (2004-12-27)
	- introduces a sysctl option to force IGMP version (2004-07-09)
	- renames IGMPv3-ready in_multi{} manipulation functions (2004-02-05)

	* freebsd5/sys/netinet/igmp.c: fixed a kernel crash by an IGMP packet
	(a bug introduced in the change at 2005-04-14)

2005-04-18  SUZUKI, Shinsuke <suz@kame.net>
	* freebsd5/sys/netinet/igmp.c, in.c, ip_output.c,
	  kame/sys/netinet/in_msf.c: fixed the byte order of an IPv4 address 