@@ -1,6 +1,6 @@
 SUBDIR+=route
 SUBDIR+=ifconfig # ping route
-SUBDIR+=rtsol ping6 ip6fw
+SUBDIR+=rtsol ping6 #ip6fw
 #SUBDIR+=pfctl pflogd
 
 .include <bsd.subdir.mk>
