@@ -1,7 +1,12 @@
 			CHANGELOG for KAME kit
-$KAME: CHANGELOG,v 1.2758 2005/04/26 15:45:38 jinmei Exp $
+$KAME: CHANGELOG,v 1.2759 2005/04/28 06:15:33 suz Exp $
 
 <200504>
+2005-04-28  SUZUKI, Shinsuke <suz@kame.net>
+	* freebsd5/sbin/ip6fw: stop including ip6fw in SNAP, since FreeBSD's
+	ip6fw is enough (KAME's ip6fw does not have any function different 
+	from ip6fw)
+
 2005-04-27  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
 	* kame/sys/netinet6/in6.c (in6_update_ifa): always updated
 	ia6_updatetime regardless of whether the address is created or
